Working undead. Fix default entities and biome spawning